=== master

* Protect migration file loading with a mutex to not break when multiple threads load migration files simultaneously (jeremyevans)

* Respect identifier mangling rules when renaming columns on Microsoft SQL Server (jeremyevans)

=== 5.5.0 (2018-01-31)

* Make Database#copy_table in the postgres adapter handle errors that occur while processing rows (jeremyevans) (#1470)

* Cache results of changed_columns method in local variables in many places for better performance (jeremyevans)

* Make modification_detection plugin not break column change detection for new objects (jeremyevans) (#1468)

* Make pg_range extension set :ruby_default schema value for recognized range defaults (jeremyevans)

* Make pg_interval extension set :ruby_default schema value for recognized interval defaults (jeremyevans)

* Make pg_json extension set :callable_default schema value for empty json/jsonb array/hash defaults (jeremyevans)

* Make pg_inet extension set :ruby_default schema value for recognized inet/cidr defaults (jeremyevans)

* Make pg_hstore extension set :callable_default schema value for empty hstore defaults (jeremyevans)

* Make pg_array extension set :callable_default schema value for recognized empty array defaults (jeremyevans) (#1466)

* Make defaults_setter plugin prefer :callable_default db_schema values over :ruby_default db_schema values (jeremyevans)

* Add defaults_setter plugin :cache option for caching default values returned (jeremyevans)

* Freeze string values in hashes returned by Database#schema (jeremyevans)

=== 5.4.0 (2018-01-04)

* Enable fractional seconds in timestamps on DB2 (jeremyevans) (#1463)

* Don't attempt to insert a second time if insert_select runs a query that doesn't return results, which can happen when triggers are used (jeremyevans)

* Make Dataset#insert_select on PostgreSQL and MSSQL return false instead of nil if the INSERT query is sent to the database but returns no rows (jeremyevans)
