@@ -175,11 +175,9 @@ module Sequel
         if !c[:max_length] && c[:type] == :string && (max_length = column_schema_max_length(c[:db_type]))
           c[:max_length] = max_length
         end
-
-        c.each_value do |val|
-          val.freeze if val.is_a?(String)
-        end
       end
+      schema_post_process(cols)
+
       Sequel.synchronize{@schemas[quoted_name] = cols} if cache_schema
       cols
     end
@@ -341,6 +339,15 @@ module Sequel
         :blob
       when /\Aenum/io
         :enum
+      end
+    end
+
+    # Post process the schema values.  
+    def schema_post_process(cols)
+      cols.each do |_,c|
+        c.each_value do |val|
+          val.freeze if val.is_a?(String)
+        end
       end
     end
   end
